--- a/less/ehang.less
+++ b/less/ehang.less
@@ -84,6 +84,7 @@ html,body {
       box-shadow: 2px 0 7px #ccc;
       &:hover {
         background-color: rgba(220, 223, 245, 0.7);
+        cursor: pointer;
       }
       .right-info {
         margin-top: 10px;
@@ -108,6 +109,7 @@ html,body {
       box-shadow: 2px 0 7px #ccc;
       &:hover {
         background-color: rgba(135, 206, 235, 0.7);
+        cursor:pointer
       }
       .right-info {
         margin-top: 10px;
@@ -132,6 +134,7 @@ html,body {
       box-shadow: 2px 0 7px #ccc;
       &:hover {
         background-color: rgba(255, 192, 203, 0.7);
+        cursor:pointer
       }
       .right-info {
         margin-top: 10px;
@@ -156,6 +159,7 @@ html,body {
       box-shadow: 2px 0 7px #ccc;
       &:hover {
         background-color: rgba(244, 235, 213, 0.7);
+        cursor:pointer
       }
       .right-info {
         margin-top: 10px;
@@ -180,6 +184,7 @@ html,body {
       box-shadow: 2px 0 7px #ccc;
       &:hover {
         background-color: rgba(255, 255, 153, 0.7);
+        cursor:pointer
       }
       .right-info {
         margin-top: 10px;
@@ -204,6 +209,7 @@ html,body {
       box-shadow: 2px 0 7px #ccc;
       &:hover {
         background-color: rgba(144, 238, 144, 0.7);
+        cursor:pointer
       }
       .right-info {
         margin-top: 10px;
